# pypanther

./: Makefile  README.md  main.py  pyproject.toml
example_logs/: guardduty1.json  guardduty2.json
helpers/: misc.py
overrides/: aws_guardduty.py
rules/: guardduty_rule.py
